# components-public

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.codex/: PR-C2F-example.md  PR-P2F-01-audit.md  PR-P2F-01-component-pack2flow.md  PR-P2F-02-implement-pack2flow-jump.md  repo_overview.md
.github/workflows/: ci.yml  dev-publish.yml  publish-extension.yml  publish-llm-generic-extension.yml  publish-platform-extension.yml  publish-webhook-extension.yml  publish.yml
artifacts/readme-gtests/01_component-chat2data-llm_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/01_component-chat2data-llm_add_to_flow/artifacts/: main.ygtc  setup.answers.json  step-001.meta.json  step-003.meta.json  step-004.meta.json  step-005.meta.json  step-006.meta.json  step-007.meta.json  step-008.meta.json  step-009.meta.json  step-010.meta.json  step-011.meta.json  step-012.meta.json  step-013.meta.json
artifacts/readme-gtests/02_component-chat2data-executor_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/02_component-chat2data-executor_add_to_flow/artifacts/: main.ygtc  setup.answers.json  step-001.meta.json  step-003.meta.json  step-004.meta.json  step-005.meta.json  step-006.meta.json  step-007.meta.json  step-008.meta.json  step-009.meta.json  step-010.meta.json  step-011.meta.json  step-012.meta.json
artifacts/readme-gtests/03_component-chat2data-renderer_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/03_component-chat2data-renderer_add_to_flow/artifacts/: main.ygtc  setup.answers.json  step-001.meta.json  step-003.meta.json  step-004.meta.json  step-005.meta.json  step-006.meta.json  step-007.meta.json  step-008.meta.json  step-009.meta.json  step-010.meta.json  step-011.meta.json
artifacts/readme-gtests/04_component-chat2data-translator_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/05_component-chat2data-validator_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/06_component-events2msg_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/07_component-http_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/08_component-msg2events_add_to_flow/: scenario.meta.json
artifacts/readme-gtests/09_component-pack2flow_add_to_flow/: scenario.meta.json
ci/: check_publisher_prefix.sh  local_check.sh
crates/component-chat2data-executor/: Cargo.toml  component.manifest.json
crates/component-chat2data-executor/src/: lib.rs
crates/component-chat2data-llm/: Cargo.toml  component.manifest.json
crates/component-chat2data-llm/src/: lib.rs
crates/component-chat2data-llm/wit/chat2data-llm/: interfaces.wit
crates/component-chat2data-renderer/: Cargo.toml  component.manifest.json
crates/component-chat2data-renderer/src/: lib.rs
crates/component-chat2data-translator/: Cargo.toml  component.manifest.json
crates/component-chat2data-translator/src/: lib.rs
crates/component-chat2data-validator/: Cargo.toml  component.manifest.json
crates/component-chat2data-validator/src/: lib.rs
crates/component-events2msg/: Cargo.toml  rust-toolchain.toml
crates/component-events2msg/src/: lib.rs
crates/component-events2msg/wit/events2msg/: world.wit
crates/component-http/: Cargo.toml  Makefile  rust-toolchain.toml
crates/component-http/assets/i18n/: en.json
crates/component-http/src/: describe.rs  http.rs  lib.rs  qa.rs  request.rs  stream.rs
crates/component-http/wit/http/: world.wit
crates/component-msg2events/: Cargo.toml
crates/component-msg2events/src/: lib.rs
crates/component-msg2events/wit/msg2events/: world.wit
crates/component-pack2flow/: Cargo.toml  Makefile  README.md  component.manifest.json
crates/component-pack2flow/schemas/: component.schema.json
crates/component-pack2flow/schemas/io/: input.schema.json  output.schema.json
crates/component-pack2flow/src/: bindings.rs  lib.rs
crates/component-pack2flow/tests/: conformance.rs
crates/component-pack2flow/wit/: world.wit
crates/gtest-fixture-exporter/: Cargo.toml
crates/gtest-fixture-exporter/src/: main.rs
crates/http-core/: Cargo.toml
crates/http-core/src/: auth.rs  config.rs  curl.rs  lib.rs  node.rs  url.rs
crates/http-core/tests/: auth_test.rs  config_test.rs  curl_test.rs  node_test.rs  url_test.rs
crates/http-extension/: Cargo.toml  README.md  build.rs  build.sh  describe.json
crates/http-extension/i18n/: en.json
crates/http-extension/prompts/: examples.md  flow-integration.md  rules.md  system.md
crates/http-extension/schemas/: http-node-v1.json
crates/http-extension/src/: lib.rs
crates/http-extension/src/tools/: auth_suggest.rs  card_submit.rs  curl_import.rs  generate.rs  mod.rs  validate.rs
crates/http-extension/tests/: generate_tool.rs
crates/llm-generic-extension/: Cargo.toml  README.md  build.sh  describe.json
crates/llm-generic-extension/i18n/: en.json
crates/llm-generic-extension/src/: lib.rs
crates/platform-extension/: .gitignore  Cargo.toml  build.sh  describe.json
crates/platform-extension/src/: lib.rs
crates/platform-extension/wit/: world.wit
crates/webhook-extension/: Cargo.toml  README.md  build.sh  describe.json
crates/webhook-extension/i18n/: en.json
crates/webhook-extension/src/: bindings.rs  lib.rs
crates/webhook-extension/src/tools/: curl_import.rs  mod.rs  suggest_path.rs  validate.rs
docs/: pack2flow_audit.md
docs/superpowers/plans/: 2026-04-19-greentic-http-extension.md
docs/superpowers/specs/: 2026-04-19-greentic-http-extension-design.md  2026-05-06-platform-bootstrap-upgrade-audit.md  2026-05-06-webhook-extension-split-design.md
tests/gtests/README/: 01_component-chat2data-llm_add_to_flow.gtest  02_component-chat2data-executor_add_to_flow.gtest  03_component-chat2data-renderer_add_to_flow.gtest  04_component-chat2data-translator_add_to_flow.gtest  05_component-chat2data-validator_add_to_flow.gtest  06_component-events2msg_add_to_flow.gtest  07_component-http_add_to_flow.gtest  08_component-msg2events_add_to_flow.gtest  09_component-pack2flow_add_to_flow.gtest  10_http_extension_build.gtest  11_http_extension_gtdx_install.gtest
(+73 files in other folders)
