[workspace]
members = [
  "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic/components-public"
authors = ["Greentic"]
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-v0-6"] }
greentic-types = "0.4"
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "realloc"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = "s"
lto = true
strip = true
