[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic/components-public"
authors = [
    "Greentic",
]
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
greentic-types = ">=1.1.0-dev, <1.2.0-0"

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.greentic-interfaces-guest]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false
features = [
    "component-v0-6",
]

[workspace.dependencies.wit-bindgen]
version = "0.54"
default-features = false
features = [
    "macros",
    "realloc",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = "s"
lto = true
strip = true
