[package]
name = "component-chat2data-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Chat2Data Executor - sandboxed query execution with resource limits"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
greentic-types.workspace = true

[package.metadata.component]
package = "greentic:chat2data-executor"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { workspace = true, features = ["component-v0-6", "http-client-v1-1", "secrets", "telemetry"] }
wit-bindgen.workspace = true
