[package]
name = "component-chat2data-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Chat2Data Renderer - converts query results to AdaptiveCards"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[package.metadata.component]
package = "greentic:chat2data-renderer"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { workspace = true, features = ["component-v0-6", "telemetry"] }
wit-bindgen.workspace = true
