[package]
name = "component-chat2data-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Chat2Data Validator - whitelist-based intent validation for security"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
greentic-types.workspace = true

[package.metadata.component]
package = "greentic:chat2data-validator"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { workspace = true, features = ["component-v0-6", "telemetry"] }
wit-bindgen.workspace = true
