[package]
name = "component-msg2events"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bridge component for routing messaging to events flows in Greentic"
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component-v0-v6-v0@0.6.0"

[dependencies]
serde.workspace = true
serde_json.workspace = true
greentic-types.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { workspace = true, features = ["component-v0-6", "telemetry"] }
wit-bindgen.workspace = true
