[package]
name = "gtest-fixture-exporter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
greentic-types.workspace = true
serde_json.workspace = true
