[package]
name = "platform-extension"
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
authors = [
    "Greentic",
]
description = "Greentic platform-bootstrap design extension. Ships canonical node-type descriptors for the editor primitives (start, trigger, llm) that aren't owned by any other extension yet."

[package.metadata.component]
package = "greentic:platform"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."greentic:extension-base"]
path = "wit/deps/greentic/extension-base"

[package.metadata.component.target.dependencies."greentic:extension-host"]
path = "wit/deps/greentic/extension-host"

[package.metadata.component.target.dependencies."greentic:extension-design"]
path = "wit/deps/greentic/extension-design"

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
serde_json = "1"

[dependencies.wit-bindgen-rt]
version = "0.35"
features = [
    "bitflags",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]
